--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "undici": "^6.21.0",
     "urban": "^0.3.2",
     "uuid": "^10.0.0",
-    "vm2": "^3.9.19",
+    "isolated-vm": "^5.0.1",
     "wikijs": "^6.4.1",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0",
