:package: Add Uptime Kuma integration for status monitoring
Integrates Uptime Kuma API client to provide real-time service status monitoring:

- Add UptimeKuma module with caching, heartbeat tracking, and monitor status aggregation
- Create `/status` page and API endpoint displaying bot uptime, server/user counts, and monitor health
- Add environment variables for Uptime Kuma URL, API key, and status page configuration
- Fix role/channel access patterns across dashboard controllers to handle both cache

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ DATABASE_NAME=skynetbot
 # Sentry (optional)
 SENTRY_DSN=
 
+# Uptime Kuma (optional)
+UPTIME_KUMA_URL=http://uptime-kuma:3001
+UPTIME_KUMA_API_KEY=
+UPTIME_KUMA_STATUS_PAGE_SLUG=status
+
 # Third-party tokens (optional)
 DISCORD_BOTS_ORG_TOKEN=
 DISCORD_LIST_TOKEN=
