--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,19 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  uptime-kuma:
+    image: louislam/uptime-kuma:1
+    container_name: skynetbot-uptime-kuma
+    restart: always
+    security_opt:
+      - apparmor:unconfined
+    ports:
+      - "3001:3001"
+    volumes:
+      - uptime-kuma-data:/app/data
+    environment:
+      - UPTIME_KUMA_DISABLE_FRAME_SAMEORIGIN=true
+
 volumes:
   mongo-data:
+  uptime-kuma-data:
