feat: Add tiered membership system foundation
- Extend userSchema with subscription, linked_accounts, and payment_ids
- Extend siteSettingsSchema with features registry, dynamic tiers,
  OAuth providers config, and payment providers config
- Create TierManager module for feature gating and subscription management
- Add tier middleware (requireFeature, requireTierLevel, populateUserTier)
- Add env variables for OAuth (Google, GitHub, Twitch, Patreon)
- Add env variables for payments (Stripe, PayPal, BTCPay)
- Update eslint to ES2020 for optional chaining support

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,36 @@ OPEN_EXCHANGE_RATES_KEY=
 OMDB_API_KEY=
 GIST_KEY=
 OPENWEATHERMAP_KEY=
+
+# ============================================
+# TIERED MEMBERSHIP SYSTEM
+# ============================================
+
+# OAuth Providers (for linked accounts)
+# Note: Discord OAuth is configured above (DISCORD_CLIENT_ID/SECRET)
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GITHUB_OAUTH_CLIENT_ID=
+GITHUB_OAUTH_CLIENT_SECRET=
+TWITCH_OAUTH_CLIENT_ID=
+TWITCH_OAUTH_CLIENT_SECRET=
+PATREON_CLIENT_ID=
+PATREON_CLIENT_SECRET=
+PATREON_WEBHOOK_SECRET=
+
+# Payment Providers
+# Stripe (https://dashboard.stripe.com/apikeys)
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# PayPal (https://developer.paypal.com/dashboard/applications)
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_WEBHOOK_ID=
+
+# BTCPay Server (for cryptocurrency payments)
+BTCPAY_SERVER_URL=
+BTCPAY_STORE_ID=
+BTCPAY_API_KEY=
+BTCPAY_WEBHOOK_SECRET=
