--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
     "parse-duration": "^1.1.0",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-patreon": "^1.0.1",
+    "passport-twitch-new": "^0.0.2",
+    "stripe": "^14.10.0",
     "process-as-promised": "^1.0.1",
     "remove-markdown": "^0.5.5",
     "require-reload": "^0.2.2",
