feat: Add navigation dropdown, token encryption, and polish
- Add user dropdown menu in header with Dashboard, Account, Logout
- Create TokenEncryption module for secure OAuth token storage
- Update passport strategies to encrypt tokens before storing
- Add TOKEN_ENCRYPTION_KEY to .env.example with generation instructions
- Export TokenEncryption from Modules index

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,10 @@ OPENWEATHERMAP_KEY=
 # TIERED MEMBERSHIP SYSTEM
 # ============================================
 
+# Token Encryption (for storing OAuth tokens securely)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+TOKEN_ENCRYPTION_KEY=
+
 # OAuth Providers (for linked accounts)
 # Note: Discord OAuth is configured above (DISCORD_CLIENT_ID/SECRET)
 GOOGLE_OAUTH_CLIENT_ID=
