feat: add Cloudflare integration
- CloudflareService module for cache/analytics/security management
- Cloudflare middleware for real IP extraction and bot detection
- Environment configuration for Cloudflare credentials
- Maintainer routes for Cloudflare cache management

--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,23 @@ BTCPAY_SERVER_URL=
 BTCPAY_STORE_ID=
 BTCPAY_API_KEY=
 BTCPAY_WEBHOOK_SECRET=
+
+# ============================================
+# CLOUDFLARE INTEGRATION
+# ============================================
+
+# Cloudflare API credentials (for cache management, analytics, security)
+# Get API Token from: https://dash.cloudflare.com/profile/api-tokens
+# Required permissions: Zone.Cache Purge, Zone.Zone Settings, Zone.Analytics
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_ZONE_ID=
+CLOUDFLARE_ACCOUNT_ID=
+
+# Enable Cloudflare proxy trust (set to true when using Cloudflare proxy)
+CLOUDFLARE_PROXY_ENABLED=true
+
+# Security settings
+# Block direct access to origin (only allow Cloudflare IPs)
+CLOUDFLARE_REQUIRE_PROXY=false
+# Comma-separated list of blocked country codes (ISO 3166-1 alpha-2)
+CLOUDFLARE_BLOCKED_COUNTRIES=
