--- a/nginx/skynetbot.conf
+++ b/nginx/skynetbot.conf
@@ -42,6 +42,15 @@ server {
     # Cloudflare real IP restoration
     # These are Cloudflare's IP ranges - update periodically from:
     # https://www.cloudflare.com/ips/
+    
+    # IMPORTANT: If behind NAT/firewall, add your internal gateway IP first
+    # This allows Nginx to "look through" the NAT to see CF-Connecting-IP header
+    # Uncomment and adjust to match your network:
+    # set_real_ip_from 10.0.0.0/8;
+    # set_real_ip_from 172.16.0.0/12;
+    # set_real_ip_from 192.168.0.0/16;
+    # set_real_ip_from 127.0.0.1;
+    
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
