--- a/nginx/skynetbot.net.conf
+++ b/nginx/skynetbot.net.conf
@@ -38,6 +38,7 @@ server {
     ssl_stapling_verify on;
 
     # Cloudflare real IP restoration
+    set_real_ip_from 10.10.20.0/24;
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
@@ -102,6 +103,7 @@ server {
     ssl_stapling_verify on;
 
     # Cloudflare real IP restoration
+    set_real_ip_from 10.10.20.0/24;
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
