ci: optimize workflows for cost efficiency
- CI: Add path-ignore for docs/markdown (skip unnecessary runs)
- CI: Add tags-ignore to prevent duplicate runs on releases
- CI: Add concurrency group to cancel redundant in-progress runs
- Release: Add concurrency control
- Release: Pass version via job outputs (DRY)
- Release: Add OCI labels to Docker image
- Release: Specify single platform (linux/amd64) to reduce build time

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,26 +2,37 @@ name: CI
 
 on:
   push:
-    branches: [ main, master, development ]
+    branches: [main, master, development]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
+      - 'LICENSE'
+    tags-ignore:
+      - 'v*'
   pull_request:
-    branches: [ main, master, development ]
+    branches: [main, master, development]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - '.github/*.md'
+      - 'LICENSE'
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [24.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '24.x'
           cache: npm
 
       - name: Install dependencies
