feat(database): Add MariaDB 10.11 migration infrastructure
- Add DriverSQL.js, ModelSQL.js, DocumentSQL.js, CursorSQL.js, QuerySQL.js
  implementing MongoDB-compatible API for MariaDB
- Modify Driver.js to support DATABASE_TYPE env var switching (mongodb/mariadb)
- Add Database/migrations/001_initial_schema.sql with full table definitions
- Add scripts/migrate-to-mariadb.js for data migration from MongoDB
- Update .env.example with MariaDB configuration options
- Add docs/MARIADB_MIGRATION.md with migration plan and documentation

This provides a foundation for migrating from MongoDB to MariaDB 10.11
to address data integrity concerns with replica set synchronization.

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,20 @@ LOG_LEVEL=info
 LOG_FILE_LEVEL=info
 
 # Database
+# Set DATABASE_TYPE to 'mongodb' or 'mariadb'
+DATABASE_TYPE=mongodb
+
+# MongoDB Configuration
 DATABASE_URL=mongodb://localhost:27017/
 DATABASE_NAME=skynetbot
+
+# MariaDB Configuration (used when DATABASE_TYPE=mariadb)
+MARIADB_HOST=localhost
+MARIADB_PORT=3306
+MARIADB_USER=skynet
+MARIADB_PASSWORD=
+MARIADB_DATABASE=skynet
+MARIADB_POOL_SIZE=10
 
 # Sentry (optional)
 SENTRY_DSN=
