--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "helmet": "^8.0.0",
     "isolated-vm": "^5.0.1",
     "jimp": "^1.6.0",
+    "mariadb": "^3.4.5",
     "mathjs": "^13.2.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
