feat(database): Complete MariaDB SQL layer implementation
- Add ModelSQL.js with full CRUD operations
- Add CursorSQL.js with query result iteration
- Add DocumentSQL.js with atomic update support
- Add ObjectID.js for MongoDB ID compatibility
- Add DriverSQL.js connection pooling with reconnection
- Update Docker Compose with MariaDB 10.11 service
- Update Dockerfile with multi-stage optimizations
- Enhance Uptime Kuma monitoring module
- Fix seed scripts for dual-backend support
- Update CHANGELOG with migration documentation

--- a/.env.example
+++ b/.env.example
@@ -41,9 +41,12 @@ MARIADB_POOL_SIZE=10
 SENTRY_DSN=
 
 # Uptime Kuma (optional)
-UPTIME_KUMA_URL=http://uptime-kuma:3001
+# URL should use host.docker.internal if Kuma is in Docker and bot is on host
+UPTIME_KUMA_URL=http://localhost:3001
 UPTIME_KUMA_API_KEY=
 UPTIME_KUMA_STATUS_PAGE_SLUG=status
+# Push token for bot heartbeat (create a "Push" type monitor in Uptime Kuma)
+UPTIME_KUMA_PUSH_TOKEN=
 
 # Slash Commands (optional)
 REGISTER_SLASH_COMMANDS=true
