--- a/nginx/skynetbot.conf
+++ b/nginx/skynetbot.conf
@@ -116,4 +116,15 @@ server {
         expires 1d;
         add_header Cache-Control "public, immutable";
     }
+
+    # phpMyAdmin - database management
+    location /phpmyadmin/ {
+        proxy_pass http://127.0.0.1:8082/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
+    }
 }
