--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-mysql-session": "^3.0.3",
     "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "fast-levenshtein": "^3.0.0",
