docs: Update CHANGELOG and README for v1.3.0 release
- Add v1.3.0 changelog entry with per-server premium model
- Add monitoring, workflows, and dashboard enhancements
- Update README with MariaDB migration doc link
- Add release links for v1.3.0 and v1.2.1

--- a/.env.example
+++ b/.env.example
@@ -124,3 +124,13 @@ CLOUDFLARE_PROXY_ENABLED=true
 CLOUDFLARE_REQUIRE_PROXY=false
 # Comma-separated list of blocked country codes (ISO 3166-1 alpha-2)
 CLOUDFLARE_BLOCKED_COUNTRIES=
+
+# ============================================
+# MONITORING STACK (Prometheus + Grafana)
+# ============================================
+
+# Grafana admin credentials (change in production!)
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
+# Root URL for Grafana (used for links in notifications, etc.)
+GRAFANA_ROOT_URL=http://localhost:3002
