--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,3 +72,75 @@ services:
       - APACHE_PORT=8082
     network_mode: host
 
+  # ============================================
+  # Monitoring Stack (Prometheus + Grafana)
+  # ============================================
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: skynetbot-prometheus
+    restart: always
+    security_opt:
+      - apparmor:unconfined
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./data/prometheus:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention.time=30d'
+      - '--web.enable-lifecycle'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: skynetbot-grafana
+    restart: always
+    security_opt:
+      - apparmor:unconfined
+    ports:
+      - "3002:3000"
+    volumes:
+      - ./data/grafana:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=${GRAFANA_ROOT_URL:-http://localhost:3002}
+    depends_on:
+      - prometheus
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: skynetbot-node-exporter
+    restart: always
+    security_opt:
+      - apparmor:unconfined
+    ports:
+      - "9100:9100"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/rootfs'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+
+  mariadb-exporter:
+    image: prom/mysqld-exporter:latest
+    container_name: skynetbot-mariadb-exporter
+    restart: always
+    security_opt:
+      - apparmor:unconfined
+    ports:
+      - "9104:9104"
+    volumes:
+      - ./monitoring/mariadb-exporter/.my.cnf:/.my.cnf:ro
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
