--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "passport-patreon": "^1.0.1",
     "passport-twitch-new": "^0.0.2",
     "process-as-promised": "^1.0.1",
+    "prom-client": "^15.1.3",
     "remove-markdown": "^0.5.5",
     "require-reload": "^0.2.2",
     "rimraf": "^6.0.1",
