feat: Add extension system improvements and 16 seeded extensions
Extensions:
- Add 16 pre-built extensions (games, utilities, fun commands)
- Create seed-extensions.js script for database seeding
- Fix MariaDB JSON_ARRAY_APPEND syntax (use JSON_EXTRACT instead of CAST)
- Fix ObjectID wrapper class for MariaDB compatibility
- Add code_id field to gallerySchema
- Add created_at/updated_at to serverSchema

Bug Fixes:
- Fix extension ID mismatch during installation
- Fix SQL syntax error with CAST(? AS JSON)
- Handle system owner_id in extension parser

New Features:
- IndexNow module for SEO
- Matomo analytics proxy
- Feedback widget
- Account settings enhancements
- Admin menu improvements

Documentation:
- Add comprehensive EXTENSION_IDEAS.md (400+ command ideas)
- Update workflow and rules documentation

Monitoring:
- Add Matomo dashboard for Grafana

--- a/.env.example
+++ b/.env.example
@@ -134,3 +134,16 @@ GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=admin
 # Root URL for Grafana (used for links in notifications, etc.)
 GRAFANA_ROOT_URL=http://localhost:3002
+
+# IndexNow (for instant search engine indexing)
+# Get your API key from Bing Webmaster Tools: https://www.bing.com/webmasters
+# The key file will be served at /{key}.txt for verification
+INDEXNOW_API_KEY=
+
+# Matomo Analytics (for website analytics dashboard)
+# URL to your Matomo instance (e.g., https://analytics.example.com)
+MATOMO_URL=
+# Site ID in Matomo (usually 1 for the first site)
+MATOMO_SITE_ID=1
+# API Token from Matomo (Administration > Personal > Security > Auth tokens)
+MATOMO_TOKEN=
