--- a/nginx/skynetbot.net.conf
+++ b/nginx/skynetbot.net.conf
@@ -15,7 +15,7 @@ upstream uptime_kuma {
 server {
     listen 80;
     listen [::]:80;
-    server_name skynetbot.net status.skynetbot.net;
+    server_name skynetbot.net www.skynetbot.net status.skynetbot.net;
     return 301 https://$host$request_uri;
 }
 
@@ -23,7 +23,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name skynetbot.net;
+    server_name skynetbot.net www.skynetbot.net;
 
     # SSL Configuration
     ssl_certificate /etc/letsencrypt/live/skynetbot.net/fullchain.pem;
@@ -55,6 +55,57 @@ server {
     set_real_ip_from 197.234.240.0/22;
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
+
+    # Bot list webhook endpoints - CORS enabled for testing
+    location /webhooks/discordbotlist {
+        # Handle preflight OPTIONS request
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://discordbotlist.com' always;
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-DBL-Signature' always;
+            add_header 'Access-Control-Max-Age' 86400 always;
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain';
+            return 204;
+        }
+
+        proxy_pass http://skynetbot;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Add CORS headers to response
+        add_header 'Access-Control-Allow-Origin' 'https://discordbotlist.com' always;
+        add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-DBL-Signature' always;
+    }
+
+    location /webhooks/topgg {
+        # Handle preflight OPTIONS request
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://top.gg' always;
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-DBL-Signature' always;
+            add_header 'Access-Control-Max-Age' 86400 always;
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain';
+            return 204;
+        }
+
+        proxy_pass http://skynetbot;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Add CORS headers to response
+        add_header 'Access-Control-Allow-Origin' 'https://top.gg' always;
+        add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-DBL-Signature' always;
+    }
 
     # Proxy settings
     location / {
