--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ monitoring/mariadb-exporter/.my.cnf
 Temp/*.json
 
 # Logs
-logs
+logs/
+scripts/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -35,3 +36,6 @@ dev-debug.log
 tasks.json
 # Data persistence
 data/
+
+Temp/
+certs/
