--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,9 @@ services:
     restart: always
     security_opt:
       - apparmor:unconfined
-    ports:
-      - "3001:3001"
+    network_mode: host
+    extra_hosts:
+      - "host.docker.internal:127.0.0.1"
     volumes:
       - ./data/uptime-kuma:/app/data
       # Mount Docker socket for container monitoring
@@ -50,14 +51,12 @@ services:
       # MariaDB configuration
       - DATA_DIR=/app/data
       - DATABASE_TYPE=mariadb
-      - DATABASE_HOSTNAME=host.docker.internal
+      - DATABASE_HOSTNAME=127.0.0.1
       - DATABASE_PORT=3306
       - DATABASE_NAME=uptime_kuma
       - DATABASE_USERNAME=root
       - DATABASE_PASSWORD=${MARIADB_PASSWORD}
-    # Allow container to reach host services
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+
 
   phpmyadmin:
     image: phpmyadmin:latest
