feat: Add Redis caching and game activity tracking system
Add Redis integration for cross-shard caching and session storage:
- Add Redis configuration to .env.example with host/port/password/db settings
- Add Redis.js module with connection pooling and health checks
- Migrate AI ConversationMemory to use Redis with in-memory fallback
- Migrate AI RateLimiter to use Redis for cross-shard rate limiting
- Add Redis-backed session store for web dashboard

Add comprehensive game activity tracking:
- Ad

--- a/.env.example
+++ b/.env.example
@@ -147,3 +147,14 @@ MATOMO_URL=
 MATOMO_SITE_ID=1
 # API Token from Matomo (Administration > Personal > Security > Auth tokens)
 MATOMO_TOKEN=
+
+# ============================================
+# REDIS CONFIGURATION
+# ============================================
+# Redis provides cross-shard caching, session storage, and rate limiting
+# Install on server: sudo apt install redis-server
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+# Optional: Use a specific database number (0-15)
+REDIS_DB=0
