--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "chalk": "^4.1.2",
     "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
+    "connect-redis": "^9.0.0",
     "convert-units": "^2.3.4",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dblposter": "^1.3.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.3.1",
@@ -44,6 +46,7 @@
     "fs-nextra": "^0.5.1",
     "gifwrap": "^0.10.1",
     "helmet": "^8.0.0",
+    "ioredis": "^5.8.2",
     "isolated-vm": "^5.0.1",
     "jimp": "^1.6.0",
     "mariadb": "^3.4.5",
@@ -65,6 +68,7 @@
     "passport-twitch-new": "^0.0.2",
     "process-as-promised": "^1.0.1",
     "prom-client": "^15.1.3",
+    "rate-limit-redis": "^4.3.1",
     "remove-markdown": "^0.5.5",
     "require-reload": "^0.2.2",
     "rimraf": "^6.0.1",
@@ -91,6 +95,7 @@
     "clean-css-cli": "^5.6.3",
     "eslint": "^8.57.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^7.1.0"
+    "eslint-plugin-promise": "^7.1.0",
+    "jest": "^30.2.0"
   }
 }
