docs: Refactor context rules for improved clarity and consistency
Restructure .cursor/rules documentation files for better readability:
- Rewrite activity-scoring-algorithm.mdc with clearer component breakdown
- Reorganize extension-management-flow.mdc into distinct workflow stages
- Enhance moderation-system-model.mdc with business rules and permission hierarchy
- Simplify shard-communication-protocol.mdc with focused technical specs
- Update .cursorrules with comprehensive business architecture

--- a/.gigaignore
+++ b/.gigaignore
@@ -6,5 +6,16 @@ node_modules/
 .windsurf/
 .taskmaster/
 .augment/
+.idea/
+.vscode/
+.giga/
+.github/
 
 monitoring/
+data/
+
+certs/
+
+scripts/
+
+extensions/
