fix: Add Guide parent page and fix navigation links
- Created guide/index.md as parent page with has_children: true
- Fixed all relative links to use proper paths without leading slashes
- Updated _config.yml to remove collections, use simpler page defaults
- Fixed Next Steps links in all guide pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,12 +40,6 @@ aux_links:
   "View on GitHub":
     - "https://github.com/scarecr0w12/CGN-Bot"
 
-# Collections
-collections:
-  guide:
-    output: true
-    permalink: /guide/:name/
-
 # Defaults
 defaults:
   - scope:
@@ -54,6 +48,11 @@ defaults:
       layout: default
   - scope:
       path: "guide"
+      type: "pages"
     values:
       layout: default
-      nav_order: 2
+  - scope:
+      path: "api"
+      type: "pages"
+    values:
+      layout: default
