--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@discordjs/voice": "^0.19.0",
     "@qdrant/js-client-rest": "^1.12.0",
     "@sentry/node": "^8.37.1",
     "adm-zip": "^0.5.16",
@@ -41,6 +42,7 @@
     "express-session": "^1.18.1",
     "fast-levenshtein": "^3.0.0",
     "feed-read": "0.0.1",
+    "ffmpeg-static": "^5.3.0",
     "figlet": "^1.8.0",
     "flatted": "^3.3.1",
     "fs-nextra": "^0.5.1",
@@ -49,6 +51,7 @@
     "ioredis": "^5.8.2",
     "isolated-vm": "^5.0.1",
     "jimp": "^1.6.0",
+    "libsodium-wrappers": "^0.7.15",
     "mariadb": "^3.4.5",
     "mathjs": "^13.2.0",
     "moment": "^2.30.1",
@@ -66,6 +69,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-patreon": "^1.0.1",
     "passport-twitch-new": "^0.0.2",
+    "play-dl": "^1.9.7",
     "process-as-promised": "^1.0.1",
     "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.3.1",
