--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "skynetbot",
-  "version": "1.1.0",
+  "version": "1.6.0",
   "description": "Still the best Discord Bot!",
   "license": "SEE LICENSE IN LICENSE",
-  "author": "Gilbert Gobbels",
+  "author": "Scarecr0w12",
   "main": "master.js",
   "repository": {
     "type": "git",
