``` docs: Remove outdated .cursor/rules documentation files
- Remove activity-scoring-algorithm.mdc (duplicate/outdated activity scoring documentation)
- Remove extension-management-flow.mdc (duplicate extension system documentation)
- Remove moderation-system-model.mdc (duplicate moderation system documentation)
- Remove shard-communication-protocol.mdc (duplicate shard communication documentation)

These files contained redundant or outdated context rules that have been superseded by main-overview

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,20 @@ DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_CLIENT_TOKEN=
 SHARD_TOTAL=auto
-BOT_STATUS=online
-BOT_ACTIVITY_NAME=skynetbot.com
-BOT_ACTIVITY_TYPE=PLAYING
-BOT_ACTIVITY_TWITCH_URL=
-BOT_VERSION=5.0.0
-BOT_BRANCH=development
+
+# Bot version info (static per deployment)
+# These are read-only - update and restart after version upgrades
+BOT_VERSION=1.6.0
+BOT_BRANCH=production
+
+# NOTE: The following settings have been MIGRATED to the database (SiteSettings collection):
+# - BOT_STATUS, BOT_ACTIVITY_NAME, BOT_ACTIVITY_TYPE, BOT_ACTIVITY_TWITCH_URL
+# - Maintainers, Wiki Contributors, Blocklists
+# - Permission levels, PM forwarding, Homepage settings
+#
+# These are now managed via the Maintainer Console in the web dashboard.
+# Run `node scripts/migrate-config-to-db.js` to migrate existing config.json data.
+# The old Configurations/config.json file is no longer needed.
 
 # Web / session
 HOSTING_URL=https://skynetbot.com/
