docs: Update Discord invite links and add server profile/creator features
- Update Discord invite from NZwzJ9Q to SE6xHmvKrZ across all GitHub templates
- Remove legacy config.template.js and config.template.json files
- Add server_profile schema with banner, tagline, about, social links, and theme customization (Tier 1+)
- Add SEO-friendly slug field to public_data for server pages
- Add creator_status schema with featured creator program, tier system, and badges
- Add bot list integrations:

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
   - name: Discord Support
-    url: https://discord.gg/NZwzJ9Q
+    url: https://discord.gg/SE6xHmvKrZ
     about: Get help with CGN-Bot usage and self-hosting
   - name: Documentation
     url: https://github.com/scarecr0w12/CGN-Bot#readme
