fix: comprehensive permission system audit and fixes (v1.7.1)
- Fixed lock/unlock commands: ManageChannels → ManageRoles for permissionOverwrites.edit()
- Added bot permission checks to channel, server, room, voice slash commands
- Added ManageRoles + role hierarchy checks to nick, role, verify commands
- Added permission checks to SlashCommandHandler role panel handlers
- Updated CHANGELOG.md and bumped version to 1.7.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skynetbot",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "description": "Still the best Discord Bot!",
   "license": "SEE LICENSE IN LICENSE",
   "author": "Scarecr0w12",
@@ -15,7 +15,9 @@
   "scripts": {
     "start": "node master.js",
     "windows-install": "npm install -g --production windows-build-tools && npm install --production",
-    "test": "npm run lint",
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "jest tests/ --passWithNoTests",
+    "test:watch": "jest tests/ --watch",
     "lint": "eslint ."
   },
   "dependencies": {
