feat: Add cache manager, query logger, onboarding event, and test suite
- Add CacheManager module for optimized caching
- Add QueryLogger for database query debugging
- Add ServerConfigHelper utility
- Add Skynet.Onboarding event handler
- Add matomo-tag-proxy controller for analytics
- Add test files for AuthMiddleware, ConfigManager, and IsolatedSandbox
- Add TypeScript type definitions
- Update AI schema and site settings
- Update middleware, routes, and controllers
- Update maintainer and dashboard views
- Add CSP fixes summary documentation
- Include log files and bot.log

--- a/.env.example
+++ b/.env.example
@@ -34,12 +34,8 @@ LOG_LEVEL=info
 LOG_FILE_LEVEL=info
 
 # Database
-# Set DATABASE_TYPE to 'mongodb' or 'mariadb'
-DATABASE_TYPE=mongodb
-
-# MongoDB Configuration
-DATABASE_URL=mongodb://localhost:27017/
-DATABASE_NAME=skynetbot
+# Set DATABASE_TYPE 'mariadb'
+DATABASE_TYPE=mariadb
 
 # MariaDB Configuration (used when DATABASE_TYPE=mariadb)
 MARIADB_HOST=localhost
