--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,11 +167,12 @@ services:
     image: oliver006/redis_exporter:latest
     container_name: skynetbot-redis-exporter
     restart: always
-    network_mode: host
+    ports:
+      - "9121:9121"
     security_opt:
       - apparmor:unconfined
     environment:
-      - REDIS_ADDR=redis://127.0.0.1:${REDIS_PORT:-6379}
+      - REDIS_ADDR=redis://skynetbot-redis:${REDIS_PORT:-6379}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-}
     depends_on:
       redis:
