--- a/.env.example
+++ b/.env.example
@@ -34,10 +34,7 @@ LOG_LEVEL=info
 LOG_FILE_LEVEL=info
 
 # Database
-# Set DATABASE_TYPE 'mariadb'
-DATABASE_TYPE=mariadb
-
-# MariaDB Configuration (used when DATABASE_TYPE=mariadb)
+# MariaDB Configuration
 MARIADB_HOST=localhost
 MARIADB_PORT=3306
 MARIADB_USER=skynet
@@ -47,6 +44,14 @@ MARIADB_POOL_SIZE=10
 
 # Sentry (optional)
 SENTRY_DSN=
+
+# Social Media Alerts API Keys
+# Twitch API - Get from https://dev.twitch.tv/console/apps
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+
+# YouTube Data API v3 - Get from https://console.cloud.google.com/
+YOUTUBE_API_KEY=
 
 # Uptime Kuma (optional)
 # URL should use host.docker.internal if Kuma is in Docker and bot is on host
